Attempting to add new "debian-core" docker image.
-- I dont think resin image structure is flexible enough.
-- I want a base image that can have an init system without blocking.
	It should behave like a typical docker image but has been initialized
    via systemd or whatever init system we use in the future.

--- a/debian-xorg-nosleep/Dockerfile
+++ b/debian-xorg-nosleep/Dockerfile
@@ -84,6 +84,7 @@ COPY xorg.conf.* /etc/X11/
 
 ### Add our own custom init script and systemd unit file
 COPY customApp.sh /usr/bin/customApp.sh
+RUN chmod =x /usr/bin/customApp.sh
 COPY custom-app.service /etc/systemd/system/custom-app.service
 RUN systemctl enable custom-app.service
 
